--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "mongousermanager",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "Kade Zimmerman",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.12.14",
+    "pug": "^3.0.0"
+  },
+  "devDependencies": {},
+  "description": ""
 }
